# aves

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: arduino-lint.yaml  python-tests.yaml  release.yaml
aves/: __init__.py  acquisition.py  dialogs.py  explorer.py  gui.py  io.py  new_template.py  realtime.py  scaffold.py  utils.py  wiring.py
aves/templates/simple_demo/: config.toml  simple_demo.ino  skeleton.toml  skeleton.yaml
aves/web/: __main__.py  broadcaster.py  server.py
aves/web/static/: app.js  index.html  settings.html  settings.js  style.css
example/: config.json  config.yaml
tests/: test_acquisition.py  test_gui.py  test_io.py  test_scaffold.py  test_utils.py  test_web_broadcaster.py  test_web_e2e.py  test_web_main.py  test_web_server.py  test_wiring.py
