[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aves"
dynamic = ["version"]
description = "Acquisition, Visualization and Exploration Software"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sergio Oller Moreno", email = "sergioller@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pyserial",
    "matplotlib",
    "pyyaml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zeehio/aves"

[tool.hatch.version]
path = "aves/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aves"]
