[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aves"
dynamic = ["version"]
description = "Acquisition, Visualization and Exploration Software"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sergio Oller Moreno", email = "sergioller@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "pyserial",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
web = ["fastapi", "uvicorn[standard]"]
test = ["pytest", "httpx", "playwright"]

[project.urls]
Homepage = "https://github.com/zeehio/aves"

[tool.hatch.version]
path = "aves/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aves"]
